hphp/hack/test/typecheck/reactive/test_mutable_async2.php
<?hh // strict

class Test {
  public function __construct(public int $val) {}
}

<<__Rx>>
async function foo(<<__Mutable>>Test $x, int $y): Awaitable<void> {}
